welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  var L = nums.lenght
               ^indexOfValue:5: error: value nums is not a case class, nor does it have an unapply/unapplySeq member
      case nums(i) => return i
           ^indexOfValue:6: error: not found: value -
      case- => return -1
          ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to L-1){
               ^