welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var L = nums.lenght
	for (i <- 0 to L-1){
    lookingFor match{
      case nums(i) => return i
      case- => return -1
    }
  }
  }